[gd_scene load_steps=9 format=3 uid="uid://dpf525vwyovn8"]

[ext_resource type="Script" uid="uid://wj7qsvs4mmsp" path="res://levels/level_3.gd" id="1_8l0e1"]
[ext_resource type="PackedScene" uid="uid://c7trk7jtixhkf" path="res://player/Score.tscn" id="2_lfnxh"]
[ext_resource type="PackedScene" uid="uid://lqhng5v8lbao" path="res://player/hearts_container.tscn" id="3_ofchu"]
[ext_resource type="Script" uid="uid://ddeuw8p2j5l45" path="res://player/camera_2d.gd" id="4_jq78i"]
[ext_resource type="PackedScene" uid="uid://pajvfvquyng0" path="res://spawnArea/spawn_area.tscn" id="5_lsnkt"]
[ext_resource type="Texture2D" uid="uid://cxp77i5bgwmns" path="res://assets/sprites/bg_evening.png" id="6_8l0e1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1bvp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(154, 747)

[node name="main" type="Node2D"]
script = ExtResource("1_8l0e1")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.974551, 0.899927, 0.866032, 1)

[node name="Flower_Spawn_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PowerUp_Spawn_Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Enemy_Spawn_Timer" type="Timer" parent="."]
wait_time = 11.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" parent="CanvasLayer" instance=ExtResource("2_lfnxh")]

[node name="HeartsContainer" parent="CanvasLayer" instance=ExtResource("3_ofchu")]
offset_left = 64.0
offset_top = 50.0
offset_right = 162.0
offset_bottom = 90.0
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("4_jq78i")

[node name="SpawnArea" parent="." instance=ExtResource("5_lsnkt")]
offset_left = 640.0
offset_top = 389.0
offset_right = 640.0
offset_bottom = 389.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
physics_material_override = SubResource("PhysicsMaterial_1bvp3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(20, -40, 12, 624, 1126, 618, 1131, 7, -8, 13, -12, -29, 1179, -26, 1171, 653, -53, 660, -40, -27)

[node name="ContinueArea2D" type="Area2D" parent="." groups=["continue"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContinueArea2D"]
position = Vector2(60, 363.5)
shape = SubResource("RectangleShape2D_lquwl")
disabled = true

[node name="background" type="Control" parent="."]
z_index = -2
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 360.0
offset_right = 680.0
offset_bottom = 400.0

[node name="BgSprite2D" type="Sprite2D" parent="background"]
texture = ExtResource("6_8l0e1")

[connection signal="timeout" from="Flower_Spawn_Timer" to="." method="_on_flower_spawn_timer_timeout"]
[connection signal="timeout" from="PowerUp_Spawn_Timer" to="." method="_on_power_up_spawn_timer_timeout"]
[connection signal="timeout" from="Enemy_Spawn_Timer" to="." method="_on_timer_enemy_spawn_timer_timeout"]
